Add elibrary.autplatform.uz domain to nginx and CSRF settings

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name elibrary.autplatform.uz 91.99.146.118;
 
     client_max_body_size 10M;
 
